--- a/src/main.css
+++ b/src/main.css
@@ -2,22 +2,6 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
-.form {
-  padding: 8px
-}
-
-.todos {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.todos__item {
-  margin: 8px;
-}
-
-.todos__item_checked {
-  background-color: #9ea;
-}
